--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="pagination"> </div>
 
     <div>
-        <button id="bwBtn" class="btn">Чорний-білий</button>
+        <button id="bwBtn" class="btn">Чорно-білий</button>
         <button id="retroBtn" class="btn">Ретро</button>
         <button id="sepiaBtn" class="btn">Сепія</button>
         <button id="resetBtn" class="btn">Скасувати</button>
